# astr731_polytrope

./: .gitignore  Cargo.toml  Snakefile  authors.txt  environment.yml  pyproject.toml  pyproject_old.toml  requirements-dev.txt  setup.py  setup_old.py
.github/workflows/: build.yml
docs/: readme.rst
examples/: change_n.py  change_step.py  compare_lang.py  run.py
polysolver/: __init__.py  analysis.py  derivatives.py  polysolver.py  runge_kutta.py
rust/: derivatives.rs  runge_kutta.rs  solve_poly.rs
src/: derivatives.rs  lib.rs  solve_poly.rs
src/scripts/: func_of_n.py  profs.py  res_n0.py  res_n1.py  res_rho.py  res_theta_prime.py  res_xi1.py  tab7.py  xinit_n0.py  xinit_res_xi1.py  xinit_xi1.py
src/tex/: bib.bib  ms.tex
test/: test_hello.py
vspec_template/: hello.py
