[package]
name = "polysolver_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "polysolver_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"

[features]
default = ["pyo3/extension-module"]